--- a/TiendaNaturista/Factura.resx
+++ b/TiendaNaturista/Factura.resx
@@ -118,10 +118,54 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="AddProduc.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3WAAAN1gGQb3mcAAAAAWJL
+        R0QAiAUdSAAAAAd0SU1FB+ILCBMTL/FiaDUAAAAldEVYdGRhdGU6Y3JlYXRlADIwMTgtMTEtMDhUMTk6
+        MTk6NDcrMDE6MDDc/BUbAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDE4LTExLTA4VDE5OjE5OjQ3KzAxOjAw
+        raGtpwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMHSURBVEhLpVVriE1RFN7e
+        FBLhh5IaEaVM5BFJSskv8ohCk1fM3XvfO8XgBw0RRR6lKIVCCnkUQl41IpNfIpNSJjLMNbPXvnemSeH6
+        1jrnXjPNPffc2LXa++y9Xvvb31pHqf8Zm3P94s0NLVfGpUKpUirXq6RRIjNCGToN+QhJK00flPXHlWkd
+        WtzOUKeyrk7E0Fdl/DEYbSiqnHLjoNOE81pV44eLjsmORHJ7JVCyfXRPOwmADCQLZBQE6iwawNBLJLC6
+        cGZpW2FtaKuy9KCnXYIWIoMqEe2WBFmRg1R0U9ZtU7DX0G3PEP39BrSG3qtk29j4d2GIGGNLV0K8GfMn
+        uOVRVZfri/WhcP9HMPs9QWLuIr7vFWw07Y8OVpUbCMV2OF0lYugI5IwYWL8o3OuQWbv5QQB/ExDvC892
+        QP916dsY/0bVfB8jStUtg5HhW8WB84OhzI/a9BA4fKfy1DXeAoGDpQNoug527JS3YZFHdicKVDauUhzU
+        5Xoj+3M4f9xF94XSmTkxNxCsXyntz2P+JhDwQxt6JGzSNB1na/D9PNijZuzdwXwV0qpW5PrEBHDrhb6C
+        L91ViczsIFsC9u5CGCytkm5euN8sBWfdUsBzKZ5Nyba5wgp5cDBE07JgDXryzAENPZU1w2HcM1lbOtut
+        XiIjbcmOgoNfQll2ytcO1r/DOY05E66zmPm7CfKzUOmx12Aj5r6lXdIiArhIZk1bCkwxvl7exPgZkPpY
+        v12o2AAn02CkAcFJlXLDEMDLrOkw1tuFyoZaJGtDB4R5ZQ1+PE2fQwgYmnKkUVX78fH+E5kJ4jzpZ8Yr
+        /4uG8bOEQeWOsn4+eWfWL5b+zq1A02XBO2okMxOh9xCCQqQb+D9Mjimu3ACBJpWdBPb0l0Ljx4waXMHW
+        r5X2YWklyHCrdADG3NB9aW6WNoI5lcLroA6KSYe0BP7tchD+K5aEK2gFjYBlqqr5NAhBTqHf7I7MKug9
+        m8Ig66B/Lf7ZNC2QFmDcFyl7DhQNUQX0bksd8Hsx+8oefJtyR4TuH4GGExVRasoKAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="TerminarFact.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3WAAAN1gGQb3mcAAAAAmJL
+        R0QAAKqNIzIAAAAHdElNRQfiCwgTEQBohTfuAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE4LTExLTA4VDE5
+        OjE3OjAwKzAxOjAwg9gV3AAAACV0RVh0ZGF0ZTptb2RpZnkAMjAxOC0xMS0wOFQxOToxNzowMCswMTow
+        MPKFrWAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwaAAACzklEQVRIS62We2jOURjH
+        N3dTSxYKuV9WVitKlJrCX1hLlCiX7A9Wa5pLJOwfMUTkzliKXNKWNUlkf4hyr7nkfinX0CJN/nl9vr+e
+        37vznv3e+bV569N5zvmd8zznec55nvNmZET8EolEJzgIFyArnIKcDRNhQNS6WGOm/BhtDWyDq7AK7sEr
+        qLf2soz5ShnLh2XGzJTvjvJm5Fo4Dj/hF0x2PMmkPxcemsFZtHmwFV7CCZN/Jw04yhWWnlAAWtgD9oA8
+        SYZLC21NIe1p28hZ2kcQeEbbFBhwlH9CXuO6RX8SfIYv0KjvMCoiNBWMr4BLUQYUs1swHhrMaGfkA/AH
+        FA6FZQJsgaegM+kOA21+mwaGMPEFnIR9tmA28nlYD3Uw2POsH2NZUPlPAzZhKJPfwFrry9gMkCcr4TXc
+        AIVhUESINjOu8GijR0EeNfu3SEY0YQHMB90GGVAodD03wA74AfMg0zYzFfkd6DprAyFzWuUGH0MjS5Cr
+        4ZkZ3e4o/Ih825TqPO7CuFiJ5oQr9KQPi3t58a9h7DnshvZlteOJwtUNpsFI0ME2wK7YO0430THyAVnJ
+        dAe+/RflTlkIz6QYxcrmju/czqE/yhbBdMiFJ7Czw2Ex5ctR9h72gpLsKxS1SzkLj4ASJOQKsqpkjhOm
+        4fR1FTWuXBgd2xiTVY71iCyFm4oxVEQpsFBtNENnaLuax32RlZgyXuJnb5NNkhF5oSwMDNCegt6wEIZ5
+        ubCJseugm6WH6DAshotQmpxLJ60BM6IqqgqqxLsP8kBVV7VGxTAlXPTLIKhnwS+NgUOMd/HDxFi+KVYo
+        z0GQ4bTaRIF58Zi25b3wDOhh0aOi+qLitR9GtJGIMlgJqsLXQLmS7Z+BMvMBqKjpIZ8CKgf6B1EKb6EK
+        lAv6tzEG1oFulNathlbl2w1RDhOUrSLlzTX39T6Xg67pd1AVVe0fG+eq/gXdDGhYlJLvGwAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
   <data name="Back.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3UAAAN1AHvkboVAAAAAmJL
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3TAAAN0wG91RxqAAAAAmJL
         R0QAAKqNIzIAAAAHdElNRQfiCwgCFy+I6mR2AAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE4LTExLTA4VDAy
         OjIzOjQ3KzAxOjAwKPq9BgAAACV0RVh0ZGF0ZTptb2RpZnkAMjAxOC0xMS0wOFQwMjoyMzo0NyswMTow
         MFmnBboAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwaAAABHUlEQVRIS92UsY4BQRyH
@@ -130,6 +174,82 @@
         zQhSWlHIclm0Y1O7KuHLifoMQu47gRLKkrAKWarGPnSSpQPJNx15neTLgWRNR8xW8kmoCk14hwHMQPyS
         gtab7qUnSCyUVOBhx0waWjCGXylz5PrFRmI8TSkswUaSDE3/D3Encz9gFIgyZp+hCyfYQtQkifuSmwSX
         MjIVOEPReJwwJCRZ46AyQKYBPduc1TyCV6vAQw7/AdP4OT6CZAHsAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAACzAAAAcwAAAHMAAABzAAAAcwAAAHMAAABzAAAAcwAAAHMAAABzAAAAcwAA
+        AHMAAABzAAAAcwAAAHMAAABzAAAAcwAAAHMAAABzAAAAcwAAAHMAAABzAAAAcwAAAHMAAABzAAAAcwAA
+        AHMAAABzAAAAcwAAALMAAAD/AAAA/wAAAHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAcwAAAP8AAAD/AAAAdAAAAAAAAAAhAAAAXAAAAFwAAABcAAAAXAAA
+        AFwAAABcAAAAXAAAADsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABzAAAA/wAAAP8AAAB0AAAAAAAAAFwAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAAogAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHMAAAD/AAAA/wAAAHQAAAAAAAAAXAAA
+        AP8AAAAsAAAAFwAAABcAAAAXAAAAFwAAABcAAAAOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcwAAAP8AAAD/AAAAdAAA
+        AAAAAABcAAAA/wAAABcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABzAAAA/wAA
+        AP8AAAB0AAAAAAAAAFwAAAD/AAAAFwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AHMAAAD/AAAA/wAAAHQAAAAAAAAAXAAAAP8AAAAXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAcwAAAP8AAAD/AAAAdAAAAAAAAABcAAAA/wAAABcAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABzAAAA/wAAAP8AAAB0AAAAAAAAAFQAAADnAAAAFQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHMAAAD/AAAA/wAAAHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcwAAAP8AAAD/AAAAdAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABzAAAA/wAAAP8AAAB0AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHMAAAD/AAAA/wAA
+        AHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcwAA
+        AP8AAAD/AAAAdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAABzAAAA/wAAAP8AAAB0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAHMAAAD/AAAA/wAAAHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAcwAAAP8AAAD/AAAAdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABzAAAA/wAAAP8AAAB0AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHMAAAD/AAAA/wAAAHQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcwAAAP8AAAD/AAAAdAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABUAAADnAAAAVAAAAAAAAABzAAAA/wAA
+        AP8AAAB0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFwAAAP8AAABcAAAAAAAA
+        AHMAAAD/AAAA/wAAAHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXAAAA/wAA
+        AFwAAAAAAAAAcwAAAP8AAAD/AAAAdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ABcAAAD/AAAAXAAAAAAAAABzAAAA/wAAAP8AAAB0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAFwAAAP8AAABcAAAAAAAAAHMAAAD/AAAA/wAAAHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOAAAAFwAA
+        ABcAAAAXAAAAFwAAABcAAAAsAAAA/wAAAFwAAAAAAAAAcwAAAP8AAAD/AAAAdAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AKIAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAXAAAAAAAAABzAAAA/wAAAP8AAAB0AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAOgAAAFwAAABcAAAAXAAAAFwAAABcAAAAXAAAAFwAAAAhAAAAAAAAAHMAAAD/AAAA/wAA
+        AHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcwAA
+        AP8AAAD/AAAAswAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAA
+        AHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAA
+        AHQAAACzAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAAAAAAAAA////8IA///CAP//wgD//8I////CP///wj///8I////CP/
+        //w////8P////D////w////8P////D////w////8P////D////w////8P///xD///8Q////EP///xD//
+        /8Q///AEP//wBD//8AQ////8AAAAAAAAAAA=
 </value>
   </data>
 </root>
