--- a/TiendaNaturista/Factura.resx
+++ b/TiendaNaturista/Factura.resx
@@ -121,59 +121,55 @@
   <data name="AddProduc.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3UAAAN1AHvkboVAAAAAWJL
-        R0QAiAUdSAAAAAd0SU1FB+ILCBMTL/FiaDUAAAAldEVYdGRhdGU6Y3JlYXRlADIwMTgtMTEtMDhUMTk6
-        MTk6NDcrMDE6MDDc/BUbAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDE4LTExLTA4VDE5OjE5OjQ3KzAxOjAw
-        raGtpwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMHSURBVEhLpVVriE1RFN7e
-        FBLhh5IaEaVM5BFJSskv8ohCk1fM3XvfO8XgBw0RRR6lKIVCCnkUQl41IpNfIpNSJjLMNbPXvnemSeH6
-        1jrnXjPNPffc2LXa++y9Xvvb31pHqf8Zm3P94s0NLVfGpUKpUirXq6RRIjNCGToN+QhJK00flPXHlWkd
-        WtzOUKeyrk7E0Fdl/DEYbSiqnHLjoNOE81pV44eLjsmORHJ7JVCyfXRPOwmADCQLZBQE6iwawNBLJLC6
-        cGZpW2FtaKuy9KCnXYIWIoMqEe2WBFmRg1R0U9ZtU7DX0G3PEP39BrSG3qtk29j4d2GIGGNLV0K8GfMn
-        uOVRVZfri/WhcP9HMPs9QWLuIr7vFWw07Y8OVpUbCMV2OF0lYugI5IwYWL8o3OuQWbv5QQB/ExDvC892
-        QP916dsY/0bVfB8jStUtg5HhW8WB84OhzI/a9BA4fKfy1DXeAoGDpQNoug527JS3YZFHdicKVDauUhzU
-        5Xoj+3M4f9xF94XSmTkxNxCsXyntz2P+JhDwQxt6JGzSNB1na/D9PNijZuzdwXwV0qpW5PrEBHDrhb6C
-        L91ViczsIFsC9u5CGCytkm5euN8sBWfdUsBzKZ5Nyba5wgp5cDBE07JgDXryzAENPZU1w2HcM1lbOtut
-        XiIjbcmOgoNfQll2ytcO1r/DOY05E66zmPm7CfKzUOmx12Aj5r6lXdIiArhIZk1bCkwxvl7exPgZkPpY
-        v12o2AAn02CkAcFJlXLDEMDLrOkw1tuFyoZaJGtDB4R5ZQ1+PE2fQwgYmnKkUVX78fH+E5kJ4jzpZ8Yr
-        /4uG8bOEQeWOsn4+eWfWL5b+zq1A02XBO2okMxOh9xCCQqQb+D9Mjimu3ACBJpWdBPb0l0Ljx4waXMHW
-        r5X2YWklyHCrdADG3NB9aW6WNoI5lcLroA6KSYe0BP7tchD+K5aEK2gFjYBlqqr5NAhBTqHf7I7MKug9
-        m8Ig66B/Lf7ZNC2QFmDcFyl7DhQNUQX0bksd8Hsx+8oefJtyR4TuH4GGExVRasoKAAAAAElFTkSuQmCC
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3UAAAN1AHvkboVAAAAB3RJ
+        TUUH4gsIExMv8WJoNQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMSSURBVEhL
+        rVVtiI1BFB7fFBLhh5IiohSRj0hSSn6Rj2yhzVfsvjN3t1jrBy0RRaxSttRSSCEfhZZ8bBGRXyKb2rKR
+        XXvtzpl7d9sUXs+c99zbLve99xZPnc6Zc+bMmXnmS/0TdoSDxMoDTWuVthUipUqF/SSSG+WpMcipg3yE
+        JFVAzcq4WqU7RkqPP6CpRxlbw6KpTWl3CklbJdoXFXYS+rQgXqUq3Wj26fRYTOwgF0p0jWdfH3ABzIBn
+        gRlFhXok2heaXmICJdJSytBusXxsF9oPpNUL5bScqfES2FXs02Qhk9nOIOicCd8raUXQRGIBoFbTB5Xo
+        nCiOPPAUeY4NXYX2fHt5glWeVDXhQNjHxPc90u4A52l7Ce0GidVhnMPsz4nScCg6dWHQDSyaTkDOccy4
+        FeLrZh3YpezX7hYoPiSxvZA37I+Fdm9V5bcJbJe1D8cM33HhDDyVGVQlR6D9Pnt0tTNg4CjbsQjoBqSa
+        98YLb7I9nT3K2s5mXRP2x4DnEX/cq+8LFaQWcTwWEdevVeAuQH9lCvxGa3oEuwTF5yK2Ee3nkY9a4bsL
+        fQ3SodaFA2SkGGi7BXzWRjbdwyVbGM3Wc28vQvtiSZWwS8TfyhfO2NWg5zLn5UWiczGSGqINxwkJaI1s
+        PrH2BTU1su3p0PYZ24bqeYUFsTM9DgP8hPhngSAdYv8SnYSkxE5LuwXyI3vTC8In+bNvaB9WUCW+6IIF
+        tDN7UrR7ynui3Ty2i4bn2dAcJAWg4Azeo1HwOdYBHYe9h4+ypnaetaYj8FdLdgH4zQvoM5I8BcVKkypz
+        U2SEPChPTeXBE26+eP4ztFuA2TRIqzCK+nwyMG4lZt+MAhb6CvMdh0RqGvo9hOAi0k38DzMkEgMdDmFq
+        KtLTcXoG80XzmxkHf4ON28TPh6H1WPlticTAc67pPj9uhrbxe+PPdXQPckk3Pwn+y43+hLb8dEVXvgm0
+        zFKVn4ahyFm8N/sl+jeit2e7FNmM/tclkgcBLUNSIxK+IKGeC8XB/3za3oFu5/3yp69o+NUUi5x9lfoN
+        gYYTFeO10GAAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="TerminarFact.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3UAAAN1AHvkboVAAAAAmJL
-        R0QAAKqNIzIAAAAHdElNRQfiCwgTEQBohTfuAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE4LTExLTA4VDE5
-        OjE3OjAwKzAxOjAwg9gV3AAAACV0RVh0ZGF0ZTptb2RpZnkAMjAxOC0xMS0wOFQxOToxNzowMCswMTow
-        MPKFrWAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwaAAACzklEQVRIS62We2jOURjH
-        N3dTSxYKuV9WVitKlJrCX1hLlCiX7A9Wa5pLJOwfMUTkzliKXNKWNUlkf4hyr7nkfinX0CJN/nl9vr+e
-        37vznv3e+bV569N5zvmd8zznec55nvNmZET8EolEJzgIFyArnIKcDRNhQNS6WGOm/BhtDWyDq7AK7sEr
-        qLf2soz5ShnLh2XGzJTvjvJm5Fo4Dj/hF0x2PMmkPxcemsFZtHmwFV7CCZN/Jw04yhWWnlAAWtgD9oA8
-        SYZLC21NIe1p28hZ2kcQeEbbFBhwlH9CXuO6RX8SfIYv0KjvMCoiNBWMr4BLUQYUs1swHhrMaGfkA/AH
-        FA6FZQJsgaegM+kOA21+mwaGMPEFnIR9tmA28nlYD3Uw2POsH2NZUPlPAzZhKJPfwFrry9gMkCcr4TXc
-        AIVhUESINjOu8GijR0EeNfu3SEY0YQHMB90GGVAodD03wA74AfMg0zYzFfkd6DprAyFzWuUGH0MjS5Cr
-        4ZkZ3e4o/Ih825TqPO7CuFiJ5oQr9KQPi3t58a9h7DnshvZlteOJwtUNpsFI0ME2wK7YO0430THyAVnJ
-        dAe+/RflTlkIz6QYxcrmju/czqE/yhbBdMiFJ7Czw2Ex5ctR9h72gpLsKxS1SzkLj4ASJOQKsqpkjhOm
-        4fR1FTWuXBgd2xiTVY71iCyFm4oxVEQpsFBtNENnaLuax32RlZgyXuJnb5NNkhF5oSwMDNCegt6wEIZ5
-        ubCJseugm6WH6DAshotQmpxLJ60BM6IqqgqqxLsP8kBVV7VGxTAlXPTLIKhnwS+NgUOMd/HDxFi+KVYo
-        z0GQ4bTaRIF58Zi25b3wDOhh0aOi+qLitR9GtJGIMlgJqsLXQLmS7Z+BMvMBqKjpIZ8CKgf6B1EKb6EK
-        lAv6tzEG1oFulNathlbl2w1RDhOUrSLlzTX39T6Xg67pd1AVVe0fG+eq/gXdDGhYlJLvGwAAAABJRU5E
-        rkJggg==
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3UAAAN1AHvkboVAAAAB3RJ
+        TUUH4gsIExEAaIU37gAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALKSURBVEhL
+        rdZ5aM9hHMDxzW1qyUIh91WUojSlKPzlSKJEOeIP1CJXJOwfMUTkvlPkSEQkkf0hyl2u3Ec5QyJN/pn3
+        +7vPd35rM7b51Kvvns9z/b7H8zzLqipKS0vrYRtOIifS5nORjzaRqnnQ2cH34DhW4wLm4yae4XRczyE/
+        upUHuT6YEUZEuixIpIOX4AT24hu+Y2A0s102xuEunHAkemMVnmJ//P0julQY3MfSFINgxybYCO+k/HEZ
+        lO0zCofgDzmCe0jujOuXzIYO/g4Lk2QE5QF4jw+4Yz26RXV5kCvEHJxFpQl8XlfRD8WRq4+t+Akfh4+l
+        P1biIXwnjdE22lc7QQc8wQFsjtwYHMMSnEL7pHEE5VbIQVGU/zyBQaEjXmBRlJ1sOLyTeXiOy3CQdkmn
+        jCC3Ag7uD90FJyyJ6rIg4SQ2mIgJ8GtwAh+FX8tSrMVXjEd29BuCV/Bz9gekxiYDZwbJdJKp2IdHUV6D
+        dMC3uAYH9X3cQN9kgH8JGmfeSQs0i6okKLsIH2MDareq6Zg5SSMMRVf4YouxPprWPhgkneQNXEzX8Ql1
+        HzwNBksnmQ5X8/8ZnIFaYzKGoSceYF1U1y0YaCZeYxNcZB8xOqprFnTcCRdI6jzcJfOiiW06w0/RvGuh
+        e1T9PWjsLughMg1XsB6FUV0hyPuolsGJDqNh5FvChenks5LGaZBI9guuTuIduAKTCbgeRHNMQidzaVBe
+        jkvwy/IA2oEpOIOCaFb9BAZ/u4u6g/ol3YJ34K7rXuNmWOFxUZ6NZD9LgkJVE2xHg6RBRpDzOHRgH+VR
+        JCucqz/CA8q7uI/f5wWFzAk8WDxU3F/cZ7agS9KwiqDOCYvgLnwRrpXcqC4LEq7M23BT8yAfDLcD/4Mo
+        wEvshi/Yk68HFsMXbb8FqLR9lweVeXC1qsKZa5DzfJ4LP9PPcBd17+8VTaqJrKxf3QxoWP2/raMAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="Back.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3RAAAN0QHCK9/jAAAAAmJL
-        R0QAAKqNIzIAAAAHdElNRQfiCwgCFy+I6mR2AAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE4LTExLTA4VDAy
-        OjIzOjQ3KzAxOjAwKPq9BgAAACV0RVh0ZGF0ZTptb2RpZnkAMjAxOC0xMS0wOFQwMjoyMzo0NyswMTow
-        MFmnBboAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwaAAABHUlEQVRIS92UsY4BQRyH
-        uchV6OhPKdFJiCdArtNoJBp6xd01p1XRewKvILQ4OpVXUChEI5G4u71vkpVMJmvGbEYiN8kXO/H//b7s
-        LhOJ/PvleV4Byne5Ub/8wGfduUAq59KxQCl3Kwgodye4Ui4EU2hDDp5CvQ9NuRDIa8+mD5mbRRblsuiH
-        zQhSWlHIclm0Y1O7KuHLifoMQu47gRLKkrAKWarGPnSSpQPJNx15neTLgWRNR8xW8kmoCk14hwHMQPyS
-        gtab7qUnSCyUVOBhx0waWjCGXylz5PrFRmI8TSkswUaSDE3/D3Encz9gFIgyZp+hCyfYQtQkifuSmwSX
-        MjIVOEPReJwwJCRZ46AyQKYBPduc1TyCV6vAQw7/AdP4OT6CZAHsAAAAAElFTkSuQmCC
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3RAAAN0QHCK9/jAAAAB3RJ
+        TUUH4gsIAhcviOpkdgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAE0SURBVEhL
+        3ZS9LgRRGIZnRVTo6CklOglxBWy202wj0axewTa0KnpX4BaEdi3bqdyCQiGaTTZZjOc7Xtn5OZOdNUfB
+        kzzJzvneeb9m9kT/nziO13FLj2FR+Ss2dRSORLkRdgGFyXIj3ALKsuVGmAUU+cqNG9zHVZxSfDJ4sag8
+        ywue4bJeHQ/hsuVJ3vESF1Tjh8BPypM8447q8jC8drHqHKgyDYN57LlIddqqTcPAlty7SDXecE21aRjY
+        kjtLVeQBp1WbhkHRkmOs4x4e4Tl20L4kH4eqzMNwDrsuNsL7T+Z8EVt4hR/4TR+XFMvDMLtk7FVBZhMf
+        XfqLC438ELAlty5a8i4iN4MnOMAnrGnkh8As2pKJLjvy2zjEDR0VQ8iWrOixNLyzi6d6/B1Y0NDPP0sU
+        fQLT+Dk+hr6YpAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
