--- a/TiendaNaturista/Cliente.resx
+++ b/TiendaNaturista/Cliente.resx
@@ -124,12 +124,13 @@
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3QAAAN0AEQbD0HAAAAAmJL
         R0QAAKqNIzIAAAAHdElNRQfiCwgCFy+I6mR2AAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE4LTExLTA4VDAy
         OjIzOjQ3KzAxOjAwKPq9BgAAACV0RVh0ZGF0ZTptb2RpZnkAMjAxOC0xMS0wOFQwMjoyMzo0NyswMTow
-        MFmnBboAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwaAAABHUlEQVRIS92UsY4BQRyH
-        uchV6OhPKdFJiCdArtNoJBp6xd01p1XRewKvILQ4OpVXUChEI5G4u71vkpVMJmvGbEYiN8kXO/H//b7s
-        LhOJ/PvleV4Byne5Ub/8wGfduUAq59KxQCl3Kwgodye4Ui4EU2hDDp5CvQ9NuRDIa8+mD5mbRRblsuiH
-        zQhSWlHIclm0Y1O7KuHLifoMQu47gRLKkrAKWarGPnSSpQPJNx15neTLgWRNR8xW8kmoCk14hwHMQPyS
-        gtab7qUnSCyUVOBhx0waWjCGXylz5PrFRmI8TSkswUaSDE3/D3Encz9gFIgyZp+hCyfYQtQkifuSmwSX
-        MjIVOEPReJwwJCRZ46AyQKYBPduc1TyCV6vAQw7/AdP4OT6CZAHsAAAAAElFTkSuQmCC
+        MFmnBboAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwaAAABNElEQVRIS92UvS4EURiG
+        Z0VU6OgpJToJcQVsttNsI9GsXsE2tCp6V+AWhHYt26ncgkIhmk02WYznO17Z+TmTnTVHwZM8yc753nm/
+        ZvZE/584jtdxS49hUfkrNnUUjkS5EXYBhclyI9wCyrLlRpgFFPnKjRvcx1WcUnwyeLGoPMsLnuGyXh0P
+        4bLlSd7xEhdU44fAT8qTPOOO6vIwvHax6hyoMg2Deey5SHXaqk3DwJbcu0g13nBNtWkY2JI7S1XkAadV
+        m4ZB0ZJjrOMeHuE5dtC+JB+HqszDcA67LjbC+0/mfBFbeIUf+E0flxTLwzC7ZOxVQWYTH136iwuN/BCw
+        JbcuWvIuIjeDJzjAJ6xp5IfALNqSiS478ts4xA0dFUPIlqzosTS8s4unevwdWNDQzz9LFH0C0/g5Poa+
+        mKQAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
